--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Docket Server</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+    <h1>Access Granted</h1>
+
     <script src="socket.io/socket.io.js"></script>
     <script>
         var socket = io();
