--- a/public/index.html
+++ b/public/index.html
@@ -10,23 +10,28 @@
     <h1>Access Granted</h1>
 
     <script src="socket.io/socket.io.js"></script>
+
     <script>
         var socket = io();
+
         socket.on('connect', function() {
-            console.log('Conectado al servidor.')
+            console.log('Conectado al servidor')
         });
+
         socket.on('disconnect', function() {
-            console.log('Se perdio conexion con el servidor.')
+            console.log('Perdimos comunicación con el servidor');
         });
-        socket.emit('mensaje', {
-            nombre: 'Erick'
+
+
+        socket.emit('mensaje', { nombre: 'Fernando' } );
+
+        socket.on('nuevo-mensaje', function( payload ){
+            console.log('Escuhando:', payload );
         });
-        socket.on('nuevo-mensaje', function( payload ) {
-            console.log('Escuchando', payload)
-        });
-        socket.on('active-bands', function(payload) {
+
+        socket.on('active-bands', function( bands ){
             console.clear();
-            console.table(payload);
+            console.table( bands );
         });
     </script>
 </body>
